@@ -361,6 +361,10 @@ cd leansdr/src/apps
 make
 cp leandvb ../../../../bin/
 
+cd /home/pi/rpidatv/src/fake_read
+make
+cp fake_read ../../bin/
+
 # Update the previously selected version of LongMynd
 echo
 echo "--------------------------------------------"
